--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-numpy>=1.21
-soundfile
-librosa
-streamlit
-matplotlib
-pyrubberband
-pyloudnorm
+numpy>=1.21.0
+soundfile>=0.10.0
+librosa>=0.9.0
+streamlit>=1.0.0
+matplotlib>=3.5.0
